@@ -90,18 +90,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-   * suEXEC: Add Suexec directive to disable suEXEC without renaming the
-     binary (Suexec Off), or force startup failure if suEXEC is required
-     but not supported (Suexec On).
-     Trunk patch: http://svn.apache.org/viewvc?view=revision&revision=1033519
-     Simpler 2.2.x patch: http://people.apache.org/~trawick/suexec-2.2.txt
-       (unlike trunk, a) doesn't cause startup to fail if SuexecUserGroup
-       coded but suEXEC disabled, and b) doesn't add field to unixd structure
-       with reason string for why suEXEC is disabled)
-     Plz consider where doc for directive should go.  Patch has it in core, as
-     enabling/disabling the basic capability is not split out into mod_unixd 2.2.x.
-     +1: trawick, covener, wrowe
-
   * mod_authn_file: Log friendly error message if AuthUserFile is not set.
       Trunk version of patch:
          http://svn.apache.org/viewcvs.cgi?rev=1070096&view=rev
